# clean-the-text

./: .gitignore  LICENSE  README.md  setup.cfg
ctt/: clean.py
examples/: readme_example.py
