[metadata]
name = clean-the-text
version = 0.0.3
author = D. Hudson Smith
author_email = dane2@clemson.edu
description = Easily preprocess your text data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dhudsmith/clean-the-text
project_urls =
    Bug Tracker = https://github.com/dhudsmith/clean-the-text/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    regex
    emoji

[options.packages.find]
include = ctt